syntax = "proto3";

package search.query;

message QueryRequest {
  string query = 1;
}

message QueryResponse {
  message Hit {
    string id = 1;
    string title = 2;
    string description = 3;
    string image = 4;
  }

  repeated Hit hits = 1;
}

service SearchQueryService {
  rpc Query(QueryRequest) returns (QueryResponse) {};
}
